[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyapp"
version = "4.10.1"
description = "A Python application framework - Let us handle the boring stuff!"
authors = ["Tim Savage <tim@savage.company>"]
license = "BSD-3-Clause"
readme = "README.rst"
repository = "https://github.com/pyapp-org/pyapp"
documentation = "https://docs.pyapp.info"
keywords = ["framework", "application"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
packages = [
    { include = "pyapp", from = "src" },
    { include = "tests", format = "sdist" },
]
include = ["HISTORY"]

[tool.poetry.dependencies]
python = "^3.8"
argcomplete = "*"
colorama = "*"
yarl = "*"

pyyaml = {version = "*", optional = true }
toml = {version = "*", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.19"
nox = "*"
sphinx = "^5.0.2"

[tool.poetry.extras]
yaml = ["pyyaml"]
toml = ["toml"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/pyapp-org/pyapp/issues"

[tool.poetry.plugins."pytest11"]
"pyapp-pytest" = "pyapp.testing.pytest_plugin"
