[metadata]
name = pyApp
author = Tim Savage
author-email = tim@savage.company
description = A Python application framework - Let us handle the boring stuff!
long-description = file: README.rst
long-description-content-type = text/x-rst
url = https://docs.pyapp.info
platforms = any
license = BSD-3-Clause
licence_files =
    LICENSE
keywords =
    application
    framework
classifiers =
    Development Status :: 5 - Prod
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Application Frameworks
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.6
packages = find:
test_suite = tests
setup_requires =
    pytest-runner
    setuptools >=38.3
install_requires =
    argcomplete
    colorama
    yarl
tests_require =
    mock
    pytest
    pytest-cov
    pytest-asyncio

[options.extras_require]
yaml =
    pyyaml
dev =
    docutils
    black

[options.packages.find]
exclude =
    tests
    sample
    sample_extension

[aliases]
test = pytest

[bdist_wheel]
universal = False

[tool:pytest]
addopts = 
    --cov=pyapp

[check]
metadata = true
restructuredtext = true
strict = true
