[metadata]
name = pyApp
author = Tim Savage
author-email = tim@savage.company
summary = A Python application framework - Let us handle the boring stuff!
description-file = README.rst
home-page = https://github.com/timsavage/pyapp
license = BSD
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Application Frameworks
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython

keywords =
    application
    framework

[files]
packages =
    pyapp

[entry_points]

[extras]
nice-cli =
    colorama
    argcomplete

[bdist_wheel]
universal = 1
