[metadata]
name = pyApp
author = Tim Savage
author-email = tim@savage.company
summary = A Python application framework - Let us handle the boring stuff!
long-description = file: README.rst
long-description-content-type = text/x-rst
url = https://docs.pyapp.info/en/support-3.4/
platforms = any
license_files = 
    LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Application Frameworks
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
keywords =
    application
    framework

[options]
python_requires = >=2.7
packages = find:
setup_requires = 
    setuptools >=38.3
install_requires =
    six
    typing
    enum34

[options.extras_require]
nice-cli =
    colorama
    argcomplete
    argcomplete

[options.packages.find]
exclude =
    tests
    sample
    sample_extension

[bdist_wheel]
universal = 1

[check]
metadata = true
restructuredtext = true
strict = true

